<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rbezliudko.soundtestproject.MainActivity">

    <Button
        android:id="@+id/button_single_player"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:soundEffectsEnabled="false"
        android:text="@string/single_player"/>

    <Button
        android:id="@+id/button_multiplayer"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:soundEffectsEnabled="false"
        android:text="@string/multiplayer"/>

    <Button
        android:id="@+id/button_options"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:soundEffectsEnabled="false"
        android:text="@string/options"/>

    <Button
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:soundEffectsEnabled="false"
        android:text="@string/about"/>

    <Button
        android:id="@+id/button_quit"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:soundEffectsEnabled="false"
        android:text="@string/quit"/>
</LinearLayout>
